# rob-cripto

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_IMEDIATO.md  DUAL_ACCOUNT_IMPLEMENTATION_REPORT.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  POST_MIGRATION_CHECKLIST.md  RAILWAY_1_CLICK.md  RAILWAY_DEPLOY.md  README.md  RELATORIO_SMC_SENTINEL.txt  RENDER_DEPLOY.md  REORG_REPORT.md  TROUBLESHOOTING.md  VERCEL_MANUAL_DEPLOY.md  corrigir-staging.bat  dark_theme.py  dashboard.py  deploy-agora.sh  deploy-auto.bat  deploy-auto.sh  deploy-final.sh  deploy-now.ps1  deploy.ps1  deploy.sh  design-audit-report.md  design-fixes-summary.md  eslint.config.js  index.html  index.js  migrate_to_v_drive.ps1  migration_log.txt  netlify.toml  package-deploy.json  package-lock.json  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
.vercel/: project.json
api/: index.js  vercel.js
assets/: README.md
backend/: .env  .env.example  package-lock.json  package.json  production-server.js  railway.toml  server-esm.js  simple-server.js  test-api.js  test-socket.js  test_import.ts  test_socket_integration.js  tsconfig.json  vitest.config.ts
backend/native/trade-core-rs/: Cargo.toml  README.md
backend/native/trade-core-rs/src/: main.rs
backend/native/trade-core-rs/src/market_data/: mod.rs  websocket_client.rs
backend/native/trade-core-rs/src/smc/: calculator.rs  mod.rs  types.rs
config/: README.md
frontend/: .env.example  .env.production  design-audit-report.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  (+4 more)
(+359 files in other folders)
