[package]
name = "trade-core-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = "0.4"
anyhow = "1.0"
